<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.proyecto.MainActivity">

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/mensaje"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ingreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/texto"
        android:layout_centerHorizontal="true"
        android:background="@color/Cyan"
        android:textColor="@color/Cyan1"/>

    <Button
        android:id="@+id/nuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/ingreso"
        android:layout_centerHorizontal="true"
        android:background="@color/Amber"
        android:textColor="@color/Amber1"
        android:padding="6dp"/>


</RelativeLayout>
