<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.proyecto.universidades.Sonsonate">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:elevation="5dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sonsonate">

        <TextView
            android:paddingLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="@string/seleccionarsonso"
            android:textColor="@color/White"
            android:textSize="25dp"
            android:layout_marginTop="200dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/White">

        <LinearLayout
            android:id="@+id/uso"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/usologo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/uso"
                android:textColor="@color/negro"
                android:textSize="20dp" />
        </LinearLayout>

        <View
            android:background="@color/gris"
            android:layout_width = "wrap_content"
            android:layout_height="0.5dp"/>

        <LinearLayout
            android:id="@+id/uma"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/umalogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/uma"
                android:textColor="@color/negro"
                android:textSize="20dp" />
        </LinearLayout>

            <View
                android:background="@color/gris"
                android:layout_width = "wrap_content"
                android:layout_height="0.5dp"/>

        <LinearLayout
            android:id="@+id/unab"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/andresbellologo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/unab"
                android:textColor="@color/negro"
                android:textSize="20dp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
