<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.proyecto.Departamentos">



    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:elevation="5dp"
            android:layout_marginBottom="16dp"
            android:background="@color/White">

            <ImageView
                android:id="@+id/occidente"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/occidente"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:layout_below="@+id/occidente"
                android:text="@string/seleccionar_departamento"
                android:textColor="@color/negro"
                android:textSize="25dp"
                android:paddingLeft="16dp" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/White">

        <LinearLayout
            android:id="@+id/Sonsonate"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/logosonso" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textColor="@color/negro"
                android:text="@string/sonsonate"
                android:textSize="20dp" />

        </LinearLayout>
        <View
            android:background="@color/gris"
            android:layout_width = "wrap_content"
            android:layout_height="0.5dp"/>

        <LinearLayout
            android:id="@+id/SantaAna"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal"
            android:background="@color/White">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/logosantaana" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textColor="@color/negro"
                android:text="@string/santaana"
                android:textSize="20dp" />
        </LinearLayout>

        <View
            android:background="@color/gris"
            android:layout_width = "wrap_content"
            android:layout_height="0.5dp"/>

        <LinearLayout
            android:id="@+id/Ahuachapan"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:background="@color/White">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/logoahua" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/ahuchapan"
                android:textColor="@color/negro"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
