<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.proyecto.paginas.upam">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_marginTop="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/id"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewIdupam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:visibility="invisible" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center">

            <TextView
                android:id="@+id/nombreupam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom|center"
                android:padding="10dp"
                android:text="Nombre U"
                android:textColor="@color/negro"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/mision"
                android:textColor="@color/negro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/misionupam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/vision"
                android:textColor="@color/gris"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/vision"
                android:textColor="@color/negro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/visionupam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:padding="6dp"
                android:text="Texto Vision"
                android:textColor="@color/gris"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:text="@string/carreras"
                android:textColor="@color/negro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/carrerasupam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Carreras Upam"
                android:padding="6dp"
                android:textColor="@color/gris"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView  android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:gravity="bottom|center"
                android:text="@string/telefono"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/negro" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/telefonoupam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Telefono UPAM"
                android:padding="6dp"
                android:textColor="@color/gris"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:gravity="bottom|center"
                android:text="@string/direccion"
                android:textColor="@color/negro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/direccionupam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Dirección UPAM"
                android:padding="6dp"
                android:textColor="@color/gris"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/txt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:gravity="bottom|center"

                android:text="Sitio Web"
                android:textColor="@color/negro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/webupam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:autoLink="web"
                android:padding="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Sitio web"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/gris"
                android:textSize="15sp"
                android:textStyle="bold" />
</TableRow>
        <!--  coordenadas -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|center">



            <TextView
                android:id="@+id/latitudupam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:autoLink="web"
                android:padding="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Latitud"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/gris"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">


            <TextView
                android:id="@+id/longitudupam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:autoLink="web"
                android:padding="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Longitud"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/gris"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <!-- fin coordenadas -->

         </TableLayout>
            <Button
                android:id="@+id/mapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:background="@color/aqua"
                android:text="@string/ver"
                android:textAllCaps="false"
                android:textColor="@color/Amber1"
                android:textSize="18dp"
                android:layout_marginTop="450dp"
                />
        </RelativeLayout>
   </ScrollView>

</RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
